--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -1,3 +1,9 @@
-.title {
-  background: rgb(121, 242, 157);
+.page{
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.container{
+  display: flex;
 }
