--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -7,3 +7,10 @@
 .container{
   display: flex;
 }
+
+.standard-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
