--- a/main/src/pages/components/TaskList/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/TaskItem/index.less
@@ -13,11 +13,16 @@
     box-shadow: 0 0 2px 2px #c7c5c5ad;
   }
 
+  &-active{
+    background: rgb(239, 241, 252);
+    // color: #5656b4;
+  }
+
   &-info{
     display: flex;
     flex-direction: column;
     position: absolute;
-    left: 20px;
+    left: 10px;
   }
 
   &-title{
@@ -42,7 +47,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    right: 20px;
+    right: 10px;
   }
 
   &-finish{
