任务详情页开发

--- a/main/src/pages/components/TaskList/index.less
+++ b/main/src/pages/components/TaskList/index.less
@@ -21,21 +21,12 @@
       top: 10px;
       width: calc(100% - 20px);
     }
-    .time-tags{
-      position: absolute;
-      bottom: 10px;
-      width: calc(100% - 20px);
-      display: flex;
-      .ant-tag{
-        cursor: pointer;
-        height: 24px;
-        line-height: 24px;
-      }
-      .operation-btns{
-        position: absolute;
-        right: 0;
-      }
-    }
+  }
+
+  .operation-btns{
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
   }
 
   .task-item{
