--- a/main/src/pages/components/TaskList/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/TaskItem/index.less
@@ -15,14 +15,19 @@
 
   &-active{
     background: rgb(239, 241, 252);
-    // color: #5656b4;
   }
 
   &-info{
     display: flex;
     flex-direction: column;
-    position: absolute;
-    left: 10px;
+    flex: 1;
+    transition: all 0.2s;
+    border-radius: 2px;
+    margin-right: 10px;
+    padding-left: 10px;
+    &:hover{
+      background-color: #f5f5f5;
+    }
   }
 
   &-title{
@@ -35,22 +40,31 @@
   }
 
   &-endtime{
-    margin-bottom: 10px;
     background: aliceblue;
     padding: 2px 6px;
     border-radius: 4px;
     font-size: 12px;
     color: #594ff7;
+    width: 120px;
+    margin-bottom: 2px;
   }
 
   &-status{
     display: flex;
     flex-direction: column;
-    position: absolute;
-    right: 10px;
+    width: 70px;
   }
 
   &-finish{
+    border: none;
+    background: #3a77ff;
+    color: white;
+    border-radius: 2px;
+    cursor: pointer;
+    margin-bottom: 10px;
+  }
+
+  &-del{
     border: none;
     background: #3a77ff;
     color: white;
