--- a/main/src/pages/components/MainMenu/index.less
+++ b/main/src/pages/components/MainMenu/index.less
@@ -3,8 +3,22 @@
   min-width: 100px;
   display: flex;
   flex-direction: column;
-  margin: 0 10px;
-  padding: 0px 10px;
+  background: #fcfcfc;
+  // 
+  // margin: 0 10px;
+  // padding: 0px 10px;
+  // 
+
+  &-content{
+    display: flex;
+    flex-direction: column;
+    border-radius: 14px;
+    flex: 1;
+    background-color: rgb(222, 234, 246);
+    box-shadow: rgb(190, 203, 216) 4px 4px 8px 0px,
+      rgb(243, 249, 255) -4px -4px 8px 0px;
+    padding: 20px 10px;
+  }
 
   .menu-item{
     margin-bottom: 8px;
