--- a/main/src/pages/components/TaskList/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/TaskItem/index.less
@@ -2,12 +2,13 @@
   position: relative;
   height: 80px;
   padding: 10px;
-  box-shadow: 0 0 1px 1px #dddadaad;
-  border-radius: 2px;
+  box-shadow: 5px 5px 10px #d1d1d1, -5px -5px 10px #ffffff;
+  border-radius: 4px;
   align-items: center;
   display: flex;
   transition: all 0.4s;
   cursor: pointer;
+  background: #fcfcfc;
 
   &:hover{
     box-shadow: 0 0 2px 2px #c7c5c5ad;
