--- a/main/src/pages/components/TaskList/index.less
+++ b/main/src/pages/components/TaskList/index.less
@@ -1,15 +1,18 @@
 .task-list{
   flex: 1;
-  margin: 0 10px;
+  background: #fcfcfc;
   .add-task-container{
     padding: 10px;
     margin: 0  10px;
-    box-shadow: 0 0 1px 1px #dddadaad;
     transition: all 0.4s;
-    border-radius: 2px;
+    border-radius: 4px;
     align-items: center;
     height: 60px;
     position: relative;
+    box-shadow: 5px 5px 10px #d1d1d1, -5px -5px 10px #ffffff;   
+    background: #fcfcfc;
+    margin-top: 60px;
+
     &-active{
       height: 90px;
     }
