--- a/main/src/pages/components/MainMenu/MenuItem/index.less
+++ b/main/src/pages/components/MainMenu/MenuItem/index.less
@@ -9,6 +9,12 @@
   height: 36px;
   box-shadow: 0 0 2px 1px #c9def3;  
   transition: all 0.4s;
+  display: flex;
+  align-items: center;
+  svg{
+    margin-right: 10px;
+    width: 20px;
+  }
 
   &:hover{
     box-shadow: none;
