--- a/main/src/pages/components/MainMenu/index.less
+++ b/main/src/pages/components/MainMenu/index.less
@@ -4,10 +4,7 @@
   display: flex;
   flex-direction: column;
   background: #fcfcfc;
-  // 
-  // margin: 0 10px;
-  // padding: 0px 10px;
-  // 
+  padding: 60px 10px;
 
   &-content{
     display: flex;
