--- a/main/src/pages/components/TaskList/TaskToolBar/index.less
+++ b/main/src/pages/components/TaskList/TaskToolBar/index.less
@@ -3,10 +3,7 @@
   &-content{
     display: flex;
     border-radius: 4px;
-    flex: 1;
-    background-color: rgb(222, 234, 246);
-    box-shadow: rgb(190, 203, 216) 4px 4px 8px 0px,
-      rgb(243, 249, 255) -4px -4px 8px 0px;
+    flex: 1 1;
     padding: 10px 10px;
     justify-content: flex-end;
   }
