--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -1,4 +1,5 @@
 .calendar{
+  height: 400px;
   &-container{
     flex: 1;
     background: #fcfcfc;
@@ -21,4 +22,9 @@
       border-radius: 0 14px 14px 0;
     }
   }
+}
+
+#calendar{
+  height: 400px;
+  overflow: auto;
 }
