--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -1,3 +1,8 @@
+:root{
+  --mainColor: #2261e4;
+  --radius: 6px;
+}
+
 .page{
   width: 100vw;
   height: 100vh;
@@ -13,4 +18,22 @@
   justify-content: center;
   align-items: center;
   flex: 1;
+}
+
+::-webkit-scrollbar{
+  width: 2px;
+  height: 16px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-track{
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-track{
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
 }
