卡片布局优化

--- a/main/src/pages/components/TaskStatistics/index.less
+++ b/main/src/pages/components/TaskStatistics/index.less
@@ -1,4 +1,15 @@
 .charts{
   width: 300px;
   height: 300px;
+  left: -10px;
+}
+
+.cards{
+  display: flex;
+  .ant-statistic-title, .ant-statistic-content{
+    font-weight: 700;
+  }
+  .ant-statistic-title{
+    font-size: 20px;
+  }
 }
