--- a/main/src/pages/components/TaskStatistics/index.less
+++ b/main/src/pages/components/TaskStatistics/index.less
@@ -13,3 +13,49 @@
     font-size: 20px;
   }
 }
+
+.card{
+  border-radius: var(--radius);
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  width: 320px;
+  height: 320px;
+  background-color: white;
+  margin: 10px;
+  transition: box-shadow 0.2s;
+  box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.1);
+  position: relative;
+
+  &-title{
+    font-weight: 700;
+    height: 20px;
+    margin-bottom: auto;
+    left: 10px;
+    top: 12px;
+  }
+  &:hover{
+    box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
+  }
+  &-container{
+    margin-top: 40px;
+    margin-left: 20px;    
+  }
+
+  &-theme{
+    &-orange{
+      background-color: #FBAB7E;
+      background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);  
+    }
+    &-wheat{
+      background: #d3cce3; 
+      background: -webkit-linear-gradient(to right, rgb(211, 204, 227), rgb(233, 228, 240));     
+      background: linear-gradient(to right, rgb(211, 204, 227), rgb(233, 228, 240));    
+
+    }
+    &-puple{
+      background-color: #8EC5FC;
+      background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%); 
+    }
+  }
+}
