--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -13,6 +13,12 @@
   display: flex;
 }
 
+.tag{
+  padding: 2px 6px;
+  border-radius: 4px;
+  font-size: 12px;
+}
+
 .standard-container{
   display: flex;
   justify-content: center;
