--- a/main/src/pages/components/MainMenu/index.less
+++ b/main/src/pages/components/MainMenu/index.less
@@ -5,6 +5,8 @@
   flex-direction: column;
   background: #fcfcfc;
   padding: 60px 10px;
+  z-index: 1;
+  box-shadow: 0 0 2px 2px #c5c5c5db;
 
   &-content{
     display: flex;
