--- a/main/src/pages/components/TaskStatistics/index.less
+++ b/main/src/pages/components/TaskStatistics/index.less
@@ -4,6 +4,11 @@
   left: -10px;
 }
 
+#task-progress{
+  width: 500px;
+  height: 500px;
+}
+
 .cards{
   display: flex;
   .ant-statistic-title, .ant-statistic-content{
@@ -40,6 +45,14 @@
   &-container{
     margin-top: 40px;
     margin-left: 20px;    
+    &-title{
+      height: 20px;
+      font-size: 18px;
+      margin-bottom: auto;
+      margin-right: auto;
+      font-weight: bold;
+      color: #555;
+    }
   }
 
   &-theme{
