--- a/main/src/pages/components/TaskStatistics/index.less
+++ b/main/src/pages/components/TaskStatistics/index.less
@@ -43,8 +43,10 @@
     box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
   }
   &-container{
-    margin-top: 40px;
-    margin-left: 20px;    
+    font-size: 30px;
+    text-align: right;
+    margin-right: 10px;
+
     &-title{
       height: 20px;
       font-size: 18px;
