--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -43,3 +43,15 @@
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #555;
 }
+
+.ant-picker-input > input:hover{
+  border-color: var(--mainColor);
+}
+
+.ant-input:hover .ant-input-number:hover{
+  border-color: var(--mainColor);
+}
+
+.ant-input:focus, .ant-input-focused .ant-input-number-focused{
+  border-color: var(--mainColor);
+}
