--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -1,10 +1,11 @@
 .calendar{
+  
   height: 400px;
   &-container{
     flex: 1;
     background: #fcfcfc;
     padding: 10px 20px;
-    margin: 0 10px;
+    margin: 60px 10px 0 10px;
     box-shadow: 4px 5px 10px #d1d1d1, -5px -5px 10px #ffffff;
     border-radius: 4px;
   }  
