--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -3,15 +3,20 @@
   height: 400px;
   &-container{
     flex: 1;
-    background: #fcfcfc;
     padding: 10px 20px;
-    margin: 60px 10px 0 10px;
-    box-shadow: 4px 5px 10px #d1d1d1, -5px -5px 10px #ffffff;
+    margin: 0px 10px;    
     border-radius: 4px;
+
+    &-tools{
+      display: flex;
+      justify-content: space-between;
+      height: 60px;
+      align-items: center;
+    }
   }  
 
   #calendar{
-    height: 500px;
+    height: 500px;    
   }
 
   &-btns{
@@ -26,6 +31,6 @@
 }
 
 #calendar{
-  height: 400px;
+  height: calc(100vh - 80px);
   overflow: auto;
 }
