按钮输入框颜色适配

--- a/main/src/pages/components/Setting/index.less
+++ b/main/src/pages/components/Setting/index.less
@@ -9,7 +9,7 @@
 }
 
 .settings-btns{
-  background: #3a77ff;
+  background: var(--mainColor);
   border: none;
   color: white;
   border-radius: var(--radius);
