--- a/main/src/pages/components/TaskList/TaskItem/index.less
+++ b/main/src/pages/components/TaskList/TaskItem/index.less
@@ -147,7 +147,7 @@
 }
 
 .btns{
-  background: #3a77ff;
+  background: var(--mainColor);
   border: none;
   color: white;
   border-radius: var(--radius);
