--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -48,10 +48,14 @@
   border-color: var(--mainColor);
 }
 
-.ant-input:hover .ant-input-number:hover{
+.ant-input:hover{
   border-color: var(--mainColor);
 }
 
-.ant-input:focus, .ant-input-focused .ant-input-number-focused{
+.ant-input:focus, .ant-input-focused{
+  border-color: var(--mainColor);
+}
+
+.ant-input{
   border-color: var(--mainColor);
 }
