--- a/main/src/pages/components/TaskCalendar/index.less
+++ b/main/src/pages/components/TaskCalendar/index.less
@@ -34,3 +34,8 @@
   height: calc(100vh - 80px);
   overflow: auto;
 }
+
+.tui-full-calendar-weekday-schedule-title{
+  background: var(--mainColor);
+  
+}
