生成应用程序

--- a/main/src/pages/components/TaskList/TaskToolBar/index.less
+++ b/main/src/pages/components/TaskList/TaskToolBar/index.less
@@ -1,5 +1,7 @@
 .task-tool-bar{
   padding: 10px;
+  display: flex;
+  align-items: center;
   &-content{
     display: flex;
     border-radius: 4px;
