--- a/main/src/pages/index.less
+++ b/main/src/pages/index.less
@@ -59,3 +59,19 @@
 .ant-input{
   border-color: var(--mainColor);
 }
+
+.ant-radio-group-solid .ant-radio-button-wrapper-checked:not(.ant-radio-button-wrapper-disabled){
+  background: var(--mainColor);
+  background-color: var(--mainColor);
+  &:hover{
+    background: var(--mainColor);
+    background-color: var(--mainColor);
+  }
+  &::before{
+    border-color: var(--mainColor);
+  }
+}
+
+.ant-radio-button-wrapper:hover{
+  color: var(--mainColor);
+}
